--- a/app/src/main/res/layout/activity_record_list.xml
+++ b/app/src/main/res/layout/activity_record_list.xml
@@ -16,33 +16,33 @@
         android:layout_weight="1">
     </ListView>
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+    <!--<LinearLayout-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content">-->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="username:" />
-        <EditText
-            android:id="@+id/addUsername"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="password:" />
-        <EditText
-            android:id="@+id/addPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-        <Button
-            android:id="@+id/addUserBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="add user"/>
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="username:" />-->
+        <!--<EditText-->
+            <!--android:id="@+id/addUsername"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1" />-->
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="password:" />-->
+        <!--<EditText-->
+            <!--android:id="@+id/addPassword"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1" />-->
+        <!--<Button-->
+            <!--android:id="@+id/addUserBtn"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="add user"/>-->
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
 </LinearLayout>
