--- a/app/src/main/res/layout/record_list_item.xml
+++ b/app/src/main/res/layout/record_list_item.xml
@@ -8,12 +8,12 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/usernameItem" />
+        android:id="@+id/nameItem" />
 
     <TextView
         android:text="small"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/passwordItem" />
+        android:id="@+id/idItem" />
 </LinearLayout>
