--- a/app/src/main/res/layout/record.xml
+++ b/app/src/main/res/layout/record.xml
@@ -30,6 +30,11 @@
         />
 
     <Button
+        android:id="@+id/settings"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
         android:id="@+id/showList"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
