--- a/app/src/main/res/layout/record.xml
+++ b/app/src/main/res/layout/record.xml
@@ -14,6 +14,11 @@
         android:layout_height="wrap_content"
         />
     <Button
+        android:id="@+id/pauseRecord"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        />
+    <Button
         android:id="@+id/stopRecord"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
