--- a/app/src/main/res/layout/record.xml
+++ b/app/src/main/res/layout/record.xml
@@ -23,16 +23,16 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         />
-    <Button
-        android:id="@+id/startPlay"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        />
-    <Button
-        android:id="@+id/stopPlay"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        />
+    <!--<Button-->
+        <!--android:id="@+id/startPlay"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--/>-->
+    <!--<Button-->
+        <!--android:id="@+id/stopPlay"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--/>-->
 
     <Button
         android:id="@+id/settings"
@@ -43,4 +43,10 @@
         android:id="@+id/showList"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/showTime"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
