--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,19 +1,13 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <CheckBoxPreference
-        android:key="example_checkbox"
-        android:title="@string/pref_title_social_recommendations"
-        android:summary="@string/pref_description_social_recommendations"
-        android:defaultValue="true" />
-
     <!-- NOTE: EditTextPreference accepts EditText attributes. -->
     <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
     <EditTextPreference
         android:key="example_text"
-        android:title="@string/pref_title_display_name"
-        android:defaultValue="@string/pref_default_display_name"
+        android:title="@string/record_maxTime"
+        android:defaultValue="@string/record_maxTime_default"
         android:selectAllOnFocus="true"
-        android:inputType="textCapWords"
+        android:inputType="number"
         android:capitalize="words"
         android:singleLine="true"
         android:maxLines="1" />
@@ -23,10 +17,10 @@
     <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
     <ListPreference
         android:key="example_list"
-        android:title="@string/pref_title_add_friends_to_messages"
-        android:defaultValue="-1"
-        android:entries="@array/pref_example_list_titles"
-        android:entryValues="@array/pref_example_list_values"
+        android:title="@string/record_type"
+        android:defaultValue="1"
+        android:entries="@array/record_type_list_name"
+        android:entryValues="@array/record_type_list_value"
         android:negativeButtonText="@null"
         android:positiveButtonText="@null" />
 
