--- a/app/src/main/res/layout/record_list_item.xml
+++ b/app/src/main/res/layout/record_list_item.xml
@@ -11,6 +11,7 @@
 
     <TextView
         android:text="Large"
+        android:textColor="@color/white"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -22,14 +23,15 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:id="@+id/createTimeItem"
+        android:textColor="@color/white"
         android:layout_alignTop="@+id/lengthItem"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="238dp"
         android:layout_marginStart="238dp" />
     <TextView
-        android:visibility="invisible"
         android:text="small"
+        android:textColor="@color/white"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
