--- a/app/src/main/res/layout/activity_record_list.xml
+++ b/app/src/main/res/layout/activity_record_list.xml
@@ -38,7 +38,7 @@
             android:layout_toRightOf="@id/repeat_music"
             android:background="@drawable/play_selector" />
 
-        <Button
+        <ImageButton
             android:id="@+id/shuffle_music"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
