--- a/app/src/main/res/layout/record_list_item.xml
+++ b/app/src/main/res/layout/record_list_item.xml
@@ -30,6 +30,7 @@
         android:layout_marginLeft="238dp"
         android:layout_marginStart="238dp" />
     <TextView
+        android:visibility="invisible"
         android:text="small"
         android:textColor="@color/white"
         android:layout_width="fill_parent"
