--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -45,4 +45,10 @@
         android:onClick="clickShareToSinaweibo"
         />
 
+    <Button
+        android:id="@+id/btn_uploadto_qiniu"
+        android:text="upload file to qiniu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
