really share to weibo.

--- a/app/src/main/res/layout/activity_record_list.xml
+++ b/app/src/main/res/layout/activity_record_list.xml
@@ -58,7 +58,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/handle_btnlayout"
-        android:layout_marginBottom="50dp" >
+        android:layout_marginBottom="50dp"
+        android:scrollbars="vertical">
     </ListView>
 
     <RelativeLayout
