--- a/app/src/main/res/layout/record_list_item.xml
+++ b/app/src/main/res/layout/record_list_item.xml
@@ -6,16 +6,19 @@
     <TextView
         android:id="@+id/_idItem"
         android:visibility="invisible"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
         android:text="Large"
-        android:textColor="@color/white"
-        android:layout_width="fill_parent"
+        android:textColor="@color/yellow"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/nameItem" />
+        android:id="@+id/nameItem"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="17dp"
+        android:layout_marginStart="17dp" />
 
     <TextView
         android:text="small"
@@ -23,12 +26,13 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:id="@+id/createTimeItem"
-        android:textColor="@color/white"
+        android:textColor="@color/yellow"
         android:layout_alignTop="@+id/lengthItem"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="238dp"
         android:layout_marginStart="238dp" />
+
     <TextView
         android:visibility="invisible"
         android:text="small"
@@ -38,6 +42,6 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:id="@+id/lengthItem"
         android:layout_below="@+id/nameItem"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignLeft="@+id/createTimeItem"
+        android:layout_alignStart="@+id/createTimeItem" />
 </RelativeLayout>
