--- a/app/src/main/res/menu/menu_record_list.xml
+++ b/app/src/main/res/menu/menu_record_list.xml
@@ -2,8 +2,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.alpha.sound_recorder_app.ui.RecordListActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
+        <!--android:orderInCategory="100" app:showAsAction="never" />-->
+
+    <item android:id="@+id/menu_search"
+        android:title="Search"
+        android:icon="@drawable/icon_search"
+        android:showAsAction="collapseActionView|ifRoom"
+        android:actionViewClass="android.widget.SearchView"
+        tools:ignore="AppCompatResource" />
 
     <item android:id="@+id/menu_rename"
         android:title="rename"
