--- a/app/src/main/res/layout/activity_record_list.xml
+++ b/app/src/main/res/layout/activity_record_list.xml
@@ -7,110 +7,28 @@
     android:background="@drawable/bg_playback"
     android:orientation="vertical" >
 
-    <RelativeLayout
-        android:id="@+id/handle_btnlayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <Button
-            android:id="@+id/previous_music"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:background="@drawable/previous_music_selector" />
-        <Button
-            android:id="@+id/play_musics"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            />
-        <Button
-            android:id="@+id/repeat_music"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/previous_music"
-            android:background="@drawable/repeat_none_selector" />
-
-        <Button
-            android:id="@+id/play_music"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/repeat_music"
-            android:background="@drawable/play_selector" />
-
-        <ImageButton
-            android:id="@+id/shuffle_music"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/play_music"
-            android:background="@drawable/shuffle_none_selector" />
-
-        <Button
-            android:id="@+id/next_music"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/next_music_selector" />
-    </RelativeLayout>
 
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/handle_btnlayout"
-        android:layout_marginBottom="50dp"
-        android:scrollbars="vertical">
+        android:scrollbars="vertical"
+        android:layout_alignBottom="@+id/seekBar">
     </ListView>
 
-    <RelativeLayout
-        android:id="@+id/singleSong_layout"
-        android:layout_width="match_parent"
+    <SeekBar
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
+        android:id="@+id/sb_play"
+        android:layout_above="@+id/play_music"
+        android:layout_centerHorizontal="true" />
 
-        <ImageView
-            android:id="@+id/music_album"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/somee" />
-
-        <RelativeLayout
-            android:id="@+id/music_about_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignTop="@+id/music_album"
-            android:layout_toRightOf="@id/music_album" >
-
-            <TextView
-                android:id="@+id/text1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="5.0dp"
-                android:layout_marginTop="5.0dp"
-                />
-
-            <TextView
-                android:id="@+id/text2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@id/text1"
-                android:layout_marginLeft="5.0dp"
-                android:layout_marginTop="8.0dp"
-                />
-        </RelativeLayout>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/play_queue_selector" />
-    </RelativeLayout>
+    <Button
+        android:id="@+id/play_music"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/play_selector"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
