--- a/app/src/main/res/layout/activity_record_list.xml
+++ b/app/src/main/res/layout/activity_record_list.xml
@@ -7,13 +7,12 @@
     android:background="@drawable/bg_playback"
     android:orientation="vertical" >
 
-
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="425dp"
         android:scrollbars="vertical"
-        android:layout_alignBottom="@+id/seekBar">
+        android:layout_alignBottom="@+id/sb_play">
     </ListView>
 
     <SeekBar
