--- a/app/src/main/res/menu/menu_record_list.xml
+++ b/app/src/main/res/menu/menu_record_list.xml
@@ -2,8 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.alpha.sound_recorder_app.ui.RecordListActivity">
-    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
-        <!--android:orderInCategory="100" app:showAsAction="never" />-->
+    <!--<item android:id="@+id/action_settings"-->
+        <!--android:title="@string/action_settings"-->
+        <!--android:orderInCategory="100"-->
+        <!--app:showAsAction="never" />-->
 
     <item android:id="@+id/menu_search"
         android:title="Search"
@@ -15,12 +17,18 @@
     <item android:id="@+id/menu_rename"
         android:title="rename"
         android:icon="@drawable/actionbar_renamebutton"
-        android:showAsAction="collapseActionView|ifRoom"
+        android:showAsAction="always"
         tools:ignore="AppCompatResource" />
 
     <item android:id="@+id/menu_del"
         android:title="delete"
         android:icon="@drawable/actionbar_deletebutton"
-        android:showAsAction="collapseActionView|ifRoom"
+        android:showAsAction="always"
+        tools:ignore="AppCompatResource" />
+
+    <item android:id="@+id/menu_share"
+        android:title="share"
+        android:icon="@drawable/profilebutton"
+        android:showAsAction="always"
         tools:ignore="AppCompatResource" />
 </menu>
