--- a/app/src/main/res/layout/activity_record_list.xml
+++ b/app/src/main/res/layout/activity_record_list.xml
@@ -23,10 +23,19 @@
         android:layout_centerHorizontal="true" />
 
     <Button
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:id="@+id/play_music"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/play_selector"
+        android:typeface="serif"
+        android:background="@xml/pressedbuttonplay"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+    <Button
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:id="@+id/pause_music"
+        android:typeface="serif"
+        android:background="@xml/pressbuttonbigpause"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
