--- a/app/src/main/res/layout/activity_record_list.xml
+++ b/app/src/main/res/layout/activity_record_list.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="425dp"
         android:scrollbars="vertical"
-        android:layout_alignBottom="@+id/sb_play">
+        android:layout_above="@+id/sb_play">
     </ListView>
 
     <SeekBar
