--- a/app/src/main/res/layout/record_list_item.xml
+++ b/app/src/main/res/layout/record_list_item.xml
@@ -11,7 +11,7 @@
 
     <TextView
         android:text="Large"
-        android:textColor="@color/yellow"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:id="@+id/createTimeItem"
-        android:textColor="@color/yellow"
+        android:textColor="@color/white"
         android:layout_alignTop="@+id/lengthItem"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
