--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,16 +1,7 @@
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
-    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
-    <EditTextPreference
-        android:key="example_text"
-        android:title="@string/record_maxTime"
-        android:defaultValue="@string/record_maxTime_default"
-        android:selectAllOnFocus="true"
-        android:inputType="number"
-        android:capitalize="words"
-        android:singleLine="true"
-        android:maxLines="1" />
+
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
          dismiss it. -->
